# merkle-trees

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  dune  dune-project  esy.lock.json  merkle-trees.opam  package.json
esy.lock/: index.json
lib/: Crypto.re  Helpers.re  Interfaces.re  MerkleTrees.re  dune
test/: Bench.re  Support.re  Test.re  dune
test/bench/: Bench.expected  Bench.re  dune
test/spec/: Spec.re  dune
test/support/: Support.re  dune
