opam-version: "2.0"
version: "1.0"
maintainer: "contact@marcoonroad.dev"
authors: ["Marco Aurélio da Silva"]
homepage: "https://github.com/marcoonroad/merkle-trees"
bug-reports: "https://github.com/marcoonroad/merkle-trees/issues"
dev-repo: "git+https://github.com/marcoonroad/merke-trees.git"
license: "Apache-2.0"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
