(library
 (name Support)
 (public_name merkle-trees.support)
 (wrapped true)
 (modules Support)
 (libraries merkle-trees nocrypto nocrypto.unix zarith hex cstruct))

(test
 (name Test)
 (modules Test)
 (libraries alcotest merkle-trees.support))

(executable
 (name Bench)
 (public_name Bench)
 (modules Bench)
 (libraries core_bench core merkle-trees.support))
